--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
+      <p id="currentTime"  class="lead"></p>
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
@@ -119,6 +120,15 @@
       </textarea>
       <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
+
+    <div id="hour5" class="row time-block">
+        <div class="col-md-1 hour">
+            6:00PM
+        </div>
+        <textarea class="col-md-10 description">
+        </textarea>
+        <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+      </div>
   </div>
 
     </div>
